--- a/style.css
+++ b/style.css
@@ -1,32 +1,57 @@
-.container {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+* {
+    box-sizing: border-box;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+ul li {
+    font-size: 1.1rem;
+    margin: 1rem 0;
+}
+
+body{
+    background-color: rgb(193, 253, 179);
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
-    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    min-height: 100vh;
 }
 
-.answers-box {
-    display: flex;
+.container {
+    background-color: white;
+    align-items: center;
     justify-content: center;
+    width: 600px;
+    max-width: 600px;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
-.answer-button{
+.header {
+    padding: 4rem;
+    padding-bottom: 3rem;
+}
+
+.submit-button {
     background-color: green;
-    border: 1px solid green;
-    border-radius: 10%;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    display: block;
     font-size: 1rem;
+    padding: 1rem;
+    border: none;
     color: white;
-    margin: auto;
-    width: 24%;
+    width: 100%;
+    transition: 200ms;
+    cursor: pointer;
 }
 
-.answer-button :hover {
-    background-color: rgb(51, 51, 51);
-    border: 1px solid rgb(51, 51, 51);;
+
+.submit-button:hover {
+    background-color: rgb(59, 59, 59);
 }
